- Added link to Draggable Line Chart example to right menu

--- a/examples/charts/charts-drag_and_drop_log.html
+++ b/examples/charts/charts-drag_and_drop_log.html
@@ -297,7 +297,7 @@ var mychart = new YAHOO.widget.LineChart( "chart", myDataSource,
 	
 						<div id="exampleToc">
 							<ul>
-								<li class='selected'><a href='../charts/charts-quickstart.html'>Charts Quickstart Example</a></li><li><a href='../charts/charts-legend.html'>Chart with Legend Example</a></li><li><a href='../charts/charts-skins.html'>Skinning a Chart Example</a></li><li><a href='../charts/charts-datatable.html'>Chart and DataTable Example</a></li><li><a href='../charts/charts-xhr-polling.html'>Chart with DataSource Polling</a></li><li><a href='../charts/charts-stacked.html'>Stacked Bar Chart</a></li><li><a href='../charts/charts-tabview.html'>Charts in a TabView</a></li><li><a href='../charts/charts-rotation.html'>Column Chart with Rotated Title and Labels</a></li><li><a href='../charts/charts-styles.html'>Styling Lines, Borders and Fills</a></li>							</ul>
+								<li><a href='../charts/charts-quickstart.html'>Charts Quickstart Example</a></li><li class='selected'><a href='../charts/charts-drag_and_drop.html'>Charts Drag and Drop Example</a></li><li><a href='../charts/charts-legend.html'>Chart with Legend Example</a></li><li><a href='../charts/charts-skins.html'>Skinning a Chart Example</a></li><li><a href='../charts/charts-datatable.html'>Chart and DataTable Example</a></li><li><a href='../charts/charts-xhr-polling.html'>Chart with DataSource Polling</a></li><li><a href='../charts/charts-stacked.html'>Stacked Bar Chart</a></li><li><a href='../charts/charts-tabview.html'>Charts in a TabView</a></li><li><a href='../charts/charts-rotation.html'>Column Chart with Rotated Title and Labels</a></li><li><a href='../charts/charts-styles.html'>Styling Lines, Borders and Fills</a></li>							</ul>
 						</div>
 					</div>
 					
